# agent-tool-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: least-privilege-tools.json  risky-tools.json
src/agent_tool_audit/: __init__.py  __main__.py  analyzer.py  capabilities.py  cli.py  loaders.py  models.py  reporters.py  rules.py
tests/: test_analyzer.py  test_cli.py  test_loaders.py
